test/classes/initializers/errors/iteratorDeserializeMethodCalled.good
iteratorDeserializeMethodCalled.chpl:4: error: iterators can't be the deserialize method, please rename this iterator
